--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,8 +7,20 @@
     "features": {
         "ghcr.io/devcontainers/features/docker-in-docker:2": {
             "version": "latest"
+        },
+        "ghcr.io/devcontainers/features/common-utils:2": {
+            "username": "vscode",
+            "userUid": "1000",
+            "userGid": "1000",
+            "upgradePackages": "true"
         }
     },
+    "containerEnv": {
+        "CLUSTER_NAME": "my-dev-cluster"
+    },
+    // "mounts": [
+    //     "source=${localEnv:HOME}/.zshrc,target=/home/vscode/.zshrc,type=bind,consistency=cached"
+    // ],
     // [1] Use the non-root user provided by the Dockerfile
     // Critical: Give the container nearly all host capabilities
     // Required to run k3s/containerd inside the container
@@ -28,9 +40,12 @@
         }
     },
     // The command to run AFTER the container is created
-    "postCreateCommand": "echo 'Starting K3s Cluster...' && k3d cluster create my-dev-cluster",
+    "postCreateCommand": "/bin/sh -c 'if k3d cluster list | grep -q $CLUSTER_NAME; then echo \"Cluster '$CLUSTER_NAME' already exists.\"; else echo \"Cluster '$CLUSTER_NAME' not found. Creating...\"; k3d cluster create $CLUSTER_NAME; fi'",
+    // Find k3s cluster config in case it was lost during image rebuild
+    "postStartCommand": "echo \"export KUBECONFIG=\\\"$(k3d kubeconfig write $CLUSTER_NAME)\\\"\" >> /home/vscode/.bashrc",
     // Ports you want to forward to your local machine (e.g., a service you deploy)
     "forwardPorts": [
-        8080
+        8080,
+        9000
     ]
 }
