--- a/clusters/homelab/monitoring/helm-release.yaml
+++ b/clusters/homelab/monitoring/helm-release.yaml
@@ -14,3 +14,9 @@ spec:
       resources:
         limits:
           memory: 2Gi
+    grafana:
+      resources:
+        limits:
+          memory: 1Gi
+      service:
+        type: LoadBalancer
