Changing local hosts to .lan

--- a/clusters/homelab/mealie/ingress.yaml
+++ b/clusters/homelab/mealie/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: mealie
 spec:
   rules:
-    - host: mealie.local
+    - host: mealie.lan
       http:
         paths:
           - path: /
