--- a/sandbox/monitoring-values.yaml
+++ b/sandbox/monitoring-values.yaml
@@ -1,17 +1,57 @@
 prometheus:
   resources:
+    requests:
+      cpu: 200m
+      memory: 1Gi
     limits:
+      cpu: "1"
       memory: 2Gi
+  prometheusSpec:
+    storageSpec:
+      volumeClaimTemplate:
+        spec:
+          accessModes: ["ReadWriteOnce"]
+          resources:
+            requests:
+              storage: 50Gi
+          storageClassName: "local-path"
+alertmanager:
+  alertmanagerSpec:
+    storage:
+      volumeClaimTemplate:
+        spec:
+          accessModes: ["ReadWriteOnce"]
+          resources:
+            requests:
+              storage: 10Gi
+          storageClassName: "local-path"
+  ingress:
+    enabled: true
+    ingressClassName: traefik
+    hosts:
+      - alerts.lan
+    path: /
+  resources:
+    requests:
+      cpu: 50m
+      memory: 128Mi
+    limits:
+      cpu: 200m
+      memory: 256Mi
 grafana:
   ingress:
     enabled: true
     ingressClassName: traefik
     hosts:
-      - grafana.local
+      - grafana.lan
     path: /
   resources:
-    limits:
+    requests:
+      cpu: 100m
       memory: 1Gi
+    limits:
+      cpu: 500m
+      memory: 2Gi
   persistence:
     enabled: true
     size: 20Gi
