Add Trivy operator

--- a/sandbox/monitoring-values.yaml
+++ b/sandbox/monitoring-values.yaml
@@ -7,6 +7,9 @@ prometheus:
       cpu: "1"
       memory: 2Gi
   prometheusSpec:
+    serviceMonitorSelectorNilUsesHelmValues: false
+    serviceMonitorSelector: {}
+    serviceMonitorNamespaceSelector: {}
     storageSpec:
       volumeClaimTemplate:
         spec:
@@ -58,3 +61,21 @@ grafana:
     accessModes:
       - ReadWriteOnce
     storageClassName: "local-path"
+    dashboardProviders:
+    dashboardproviders.yaml:
+      apiVersion: 1
+      providers:
+        - name: ""
+          orgId: 1
+          folder: ""
+          type: file
+          disableDeletion: false
+          editable: false
+          options:
+            path: /var/lib/grafana/dashboards/default
+  dashboards:
+    default:
+      trivy-operator-dashboard:
+        gnetId: 17813
+        revision: 2
+        datasource: Prometheus
