DRYing up yaml configs

--- a/clusters/homelab/monitoring/helm-release.yaml
+++ b/clusters/homelab/monitoring/helm-release.yaml
@@ -9,64 +9,8 @@ spec:
     kind: OCIRepository
     name: prometheus-community
     namespace: monitoring
-  values:
-    prometheus:
-      resources:
-        requests:
-          cpu: 200m
-          memory: 1Gi
-        limits:
-          cpu: "1"
-          memory: 2Gi
-      prometheusSpec:
-        storageSpec:
-          volumeClaimTemplate:
-            spec:
-              accessModes: ["ReadWriteOnce"]
-              resources:
-                requests:
-                  storage: 50Gi
-              storageClassName: "local-path"
-    alertmanager:
-      alertmanagerSpec:
-        storage:
-          volumeClaimTemplate:
-            spec:
-              accessModes: ["ReadWriteOnce"]
-              resources:
-                requests:
-                  storage: 10Gi
-              storageClassName: "local-path"
-      ingress:
-        enabled: true
-        ingressClassName: traefik
-        hosts:
-          - alerts.lan
-        path: /
-      resources:
-        requests:
-          cpu: 50m
-          memory: 128Mi
-        limits:
-          cpu: 200m
-          memory: 256Mi
-    grafana:
-      ingress:
-        enabled: true
-        ingressClassName: traefik
-        hosts:
-          - grafana.lan
-        path: /
-      resources:
-        requests:
-          cpu: 100m
-          memory: 1Gi
-        limits:
-          cpu: 500m
-          memory: 2Gi
-      persistence:
-        enabled: true
-        size: 20Gi
-        accessModes:
-          - ReadWriteOnce
-        storageClassName: "local-path"
+  valuesFrom:
+    - kind: ConfigMap
+      name: monitoring-values
+    - kind: ConfigMap
+      name: monitoring-dashboards
