--- a/clusters/homelab/trivy/helm-release.yaml
+++ b/clusters/homelab/trivy/helm-release.yaml
@@ -9,10 +9,6 @@ spec:
     kind: OCIRepository
     name: trivy-operator
     namespace: trivy
-  values:
-    serviceMonitor:
-      enabled: true
-    trivy:
-      ignoreUnfixed: true
-    service:
-      headless: false
+  valuesFrom:
+    - kind: ConfigMap
+      name: trivy-values
