--- a/sandbox/monitoring/values.yaml
+++ b/sandbox/monitoring/values.yaml
@@ -48,6 +48,16 @@ grafana:
     hosts:
       - grafana.lan
     path: /
+  initChownData:
+    enabled: false
+  podSecurityContext:
+    fsGroup: 472
+    runAsGroup: 472
+    runAsUser: 472
+  securityContext:
+    fsGroup: 472
+    runAsGroup: 472
+    runAsUser: 472
   resources:
     requests:
       cpu: 100m
@@ -61,21 +71,15 @@ grafana:
     accessModes:
       - ReadWriteOnce
     storageClassName: "local-path"
-    dashboardProviders:
+  dashboardProviders:
     dashboardproviders.yaml:
       apiVersion: 1
       providers:
-        - name: ""
+        - name: "default"
           orgId: 1
           folder: ""
           type: file
           disableDeletion: false
-          editable: false
+          editable: true
           options:
             path: /var/lib/grafana/dashboards/default
-  dashboards:
-    default:
-      trivy-operator-dashboard:
-        gnetId: 17813
-        revision: 2
-        datasource: Prometheus
