--- a/.github/workflows/security-scan.yaml
+++ b/.github/workflows/security-scan.yaml
@@ -2,7 +2,7 @@ name: Trivy Security Scan
 
 on:
   pull_request:
-    branches: [ main ] # Or master, depending on your default branch
+    branches: [main]
 
 jobs:
   scan:
@@ -16,24 +16,24 @@ jobs:
       - name: Run Trivy scan on Kubernetes manifests
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: 'config'
-          scan-ref: '.'
-          format: 'table'
-          exit-code: '1'
+          scan-type: "config"
+          scan-ref: "."
+          format: "table"
+          exit-code: "1"
           ignore-unfixed: true
-          severity: 'HIGH,CRITICAL'
+          severity: "HIGH,CRITICAL"
 
       - name: Run Trivy scan on filesystem for vulnerabilities
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: 'fs'
-          scan-ref: '.'
-          format: 'sarif'
-          output: 'trivy-fs-results.sarif'
+          scan-type: "fs"
+          scan-ref: "."
+          format: "sarif"
+          output: "trivy-fs-results.sarif"
           ignore-unfixed: true
-          severity: 'HIGH,CRITICAL'
+          severity: "HIGH,CRITICAL"
 
       - name: Upload Trivy fs scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: 'trivy-fs-results.sarif'
+          sarif_file: "trivy-fs-results.sarif"
