--- a/clusters/homelab/trivy/kustomization.yaml
+++ b/clusters/homelab/trivy/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: trivy
+generatorOptions:
+  disableNameSuffixHash: true
 resources:
   - helm-release.yaml
   - helm-source.yaml
