working alert manager

--- a/sandbox/monitoring/values.yaml
+++ b/sandbox/monitoring/values.yaml
@@ -19,7 +19,10 @@ prometheus:
               storage: 50Gi
           storageClassName: "local-path"
 alertmanager:
+  enabled: true
   alertmanagerSpec:
+    secrets:
+      - alertmanager-email-creds
     storage:
       volumeClaimTemplate:
         spec:
@@ -28,6 +31,25 @@ alertmanager:
             requests:
               storage: 10Gi
           storageClassName: "local-path"
+  config:
+    global:
+      resolve_timeout: 5m
+      smtp_from: "ross.mage@gmail.com"
+      smtp_smarthost: "smtp.gmail.com:587"
+      smtp_auth_username: "ross.mage@gmail.com"
+      smtp_auth_password_file: "/etc/alertmanager/secrets/alertmanager-email-creds/email_pass"
+    route:
+      group_by: ["job"]
+      group_wait: 30s
+      group_interval: 5m
+      repeat_interval: 12h
+      receiver: "email-notifications"
+    receivers:
+      - name: "email-notifications"
+        email_configs:
+          - to: "polar-swipe-ranch@duck.com"
+            send_resolved: true
+      - name: "null"
   ingress:
     enabled: true
     ingressClassName: traefik
