--- a/clusters/homelab/monitoring/helm-release.yaml
+++ b/clusters/homelab/monitoring/helm-release.yaml
@@ -18,3 +18,5 @@ spec:
       name: monitoring-alertmanager-values
     - kind: ConfigMap
       name: monitoring-dashboards
+    - kind: ConfigMap
+      name: alert-rules
