--- a/sandbox/monitoring/prometheus-values.yaml
+++ b/sandbox/monitoring/prometheus-values.yaml
@@ -8,6 +8,7 @@ prometheus:
       memory: 2Gi
   prometheusSpec:
     serviceMonitorSelectorNilUsesHelmValues: false
+    ruleSelectorNilUsesHelmValues: false
     serviceMonitorSelector: {}
     serviceMonitorNamespaceSelector: {}
     storageSpec:
