--- a/sandbox/monitoring/prometheus-values.yaml
+++ b/sandbox/monitoring/prometheus-values.yaml
@@ -19,3 +19,23 @@ prometheus:
             requests:
               storage: 50Gi
           storageClassName: "local-path"
+prometheus-node-exporter:
+  resources:
+    limits:
+      cpu: 200m
+      memory: 180Mi
+    requests:
+      cpu: 100m
+      memory: 50Mi
+  securityContext:
+    fsGroup: 65534
+    runAsGroup: 65534
+    runAsNonRoot: true
+    runAsUser: 65534
+    seccompProfile:
+      type: RuntimeDefault
+  containerSecurityContext:
+    allowPrivilegeEscalation: false
+    capabilities:
+      drop:
+        - ALL
