--- a/clusters/homelab/mealie/kustomization.yaml
+++ b/clusters/homelab/mealie/kustomization.yaml
@@ -2,8 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: mealie
 resources:
-  - namespace.yaml
-  - pvc.yaml
-  - service.yaml
-  - deployment.yaml
-  - ingress.yaml
+  - ../../../sandbox/mealie/namespace.yaml
+  - ../../../sandbox/mealie/pvc.yaml
+  - ../../../sandbox/mealie/service.yaml
+  - ../../../sandbox/mealie/deployment.yaml
+  - ../../../sandbox/mealie/ingress.yaml
+  - ../../../sandbox/mealie/network-policies/
