--- a/clusters/homelab/trivy/kustomization.yaml
+++ b/clusters/homelab/trivy/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - helm-release.yaml
   - helm-source.yaml
   - namespace.yaml
+  - ../../../sandbox/trivy/network-policies
 configMapGenerator:
   - name: trivy-values
     files:
