--- a/sandbox/trivy/network-policies/allow-egress.yaml
+++ b/sandbox/trivy/network-policies/allow-egress.yaml
@@ -2,11 +2,11 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: allow-egress-to-dns-and-internet
-  namespace: mealie
+  namespace: trivy
 spec:
   podSelector:
     matchLabels:
-      app: mealie
+      app: trivy
   policyTypes:
     - Egress
   egress:
@@ -32,3 +32,13 @@ spec:
               - 10.42.0.0/16
               # Default k3s service CIDR
               - 10.43.0.0/16
+      ports:
+        - protocol: TCP
+          port: 443
+    # Allow to k8s server
+    - to:
+        - ipBlock:
+            cidr: 192.168.50.119/32 # homelab1
+      ports:
+        - protocol: TCP
+          port: 443
