--- a/clusters/homelab/monitoring/kustomization.yaml
+++ b/clusters/homelab/monitoring/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - helm-release.yaml
   - helm-source.yaml
   - namespace.yaml
+  - ../../../sandbox/monitoring/network-policies
 configMapGenerator:
   - name: monitoring-prometheus-values
     files:
