--- a/sandbox/monitoring/network-policies/kustomization.yaml
+++ b/sandbox/monitoring/network-policies/kustomization.yaml
@@ -8,3 +8,4 @@ resources:
   - allow-alertmanager-egress.yaml
   - allow-grafana-egress.yaml
   - allow-dns-and-kube-api.yaml
+  - allow-prometheus-ingress.yaml
