--- a/sandbox/monitoring/network-policies/allow-dns-and-kube-api.yaml
+++ b/sandbox/monitoring/network-policies/allow-dns-and-kube-api.yaml
@@ -9,20 +9,25 @@ spec:
     - Egress
   egress:
     - to:
-      - namespaceSelector:
-          matchLabels:
-            kubernetes.io/metadata.name: kube-system
-        podSelector:
-          matchLabels:
-            k8s-app: kube-dns
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: kube-system
+          podSelector:
+            matchLabels:
+              k8s-app: kube-dns
       ports:
-      - port: 53
-        protocol: UDP
-      - port: 53
-        protocol: TCP
+        - protocol: UDP
+          port: 53
+        - protocol: TCP
+          port: 53
     - to:
-      - ipBlock:
-          cidr: 192.168.50.119/32
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: default
+          podSelector:
+            matchLabels:
+              component: apiserver
+              provider: kubernetes
       ports:
-      - port: 443
-        protocol: TCP
+        - protocol: TCP
+          port: 443
