--- a/sandbox/trivy/network-policies/kustomization.yaml
+++ b/sandbox/trivy/network-policies/kustomization.yaml
@@ -4,4 +4,5 @@ resources:
   - default-deny.yaml
   - allow-monitoring.yaml
   - allow-egress.yaml
+  - allow-egress-scans.yaml
   - allow-namespace-traffic.yaml
