fix trivy label in a policy

--- a/sandbox/trivy/network-policies/allow-monitoring.yaml
+++ b/sandbox/trivy/network-policies/allow-monitoring.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: trivy
+      app.kubernetes.io/name: trivy-operator
   policyTypes:
     - Ingress
   ingress:
