--- a/sandbox/trivy/values.yaml
+++ b/sandbox/trivy/values.yaml
@@ -4,3 +4,19 @@ trivy:
   ignoreUnfixed: true
   podLabels:
     app: trivy
+  resources:
+    requests:
+      cpu: 250m
+      memory: 256M
+    limits:
+      cpu: 1000m
+      memory: 1Gi
+resources:
+  limits:
+    cpu: 500m
+    memory: 1Gi
+  requests:
+    cpu: 100m
+    memory: 128Mi
+operator:
+  scanJobTimeout: "10m"
