--- a/sandbox/minecraft/values.yaml
+++ b/sandbox/minecraft/values.yaml
@@ -1,4 +1,3 @@
-replicaCount: 0
 securityContext:
   capabilities:
     drop:
@@ -28,12 +27,12 @@ minecraftServer:
   serviceType: ClusterIP
 
 persistence:
+  storageClass: "nfs-client"
   dataDir:
     enabled: true
     size: 100Gi
     accessModes:
       - ReadWriteOnce
-    storageClassName: "local-path"
 
 extraDeploy:
   - |
