--- a/clusters/homelab/kustomization.yaml
+++ b/clusters/homelab/kustomization.yaml
@@ -1,9 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - mealie
-  - monitoring
-  - trivy
-  - minecraft
+  - home-assistant
   - kube-system
+  - mealie
+  - minecraft
+  - monitoring
   - nfs-provisioner
+  - trivy
