--- a/clusters/homelab/kube-system/traefik-tcp-entrypoint.yaml
+++ b/clusters/homelab/kube-system/traefik-tcp-entrypoint.yaml
@@ -22,3 +22,9 @@ spec:
           default: true
         exposedPort: 25565
         protocol: TCP
+      home-assistant:
+        port: 8123
+        expose:
+          default: true
+        exposedPort: 8123
+        protocol: TCP
