--- a/sandbox/home-assistant/kustomization.yaml
+++ b/sandbox/home-assistant/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 namespace: home-assistant
 resources:
   - namespace.yaml
-  # - pvc.yaml
-  # - service.yaml
-  # - deployment.yaml
-  # - ingress.yaml
+  - pvc.yaml
+  - service.yaml
+  - deployment.yaml
+  - ingress.yaml
   - network-policies/
