ha default config map

--- a/clusters/homelab/home-assistant/kustomization.yaml
+++ b/clusters/homelab/home-assistant/kustomization.yaml
@@ -8,3 +8,4 @@ resources:
   - ../../../sandbox/home-assistant/deployment.yaml
   - ../../../sandbox/home-assistant/ingress.yaml
   - ../../../sandbox/home-assistant/network-policies/
+  - ../../../sandbox/home-assistant/configmap.yaml
