--- a/sandbox/home-assistant/kustomization.yaml
+++ b/sandbox/home-assistant/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - namespace.yaml
   - pvc.yaml
   - service.yaml
+  - configmap.yaml
   - deployment.yaml
   - ingress.yaml
   - network-policies/
