adding HACS to home assistant

--- a/sandbox/home-assistant/deployment.yaml
+++ b/sandbox/home-assistant/deployment.yaml
@@ -15,6 +15,25 @@ spec:
       labels:
         app: home-assistant
     spec:
+      # --- Init Container for HACS Installation ---
+      initContainers:
+        - name: install-hacs
+          image: alpine:latest
+          command: ["/bin/sh", "-c"]
+          args:
+            - |
+              if [ ! -d "/config/custom_components/hacs" ]; then
+                echo "HACS not found. Installing..."
+                # Install dependencies required by the HACS install script
+                apk add --no-cache bash wget unzip
+                # Run the HACS download script
+                wget -O - https://get.hacs.xyz | bash -
+              else
+                echo "HACS already installed. Skipping."
+              fi
+          volumeMounts:
+            - mountPath: /config
+              name: config
       containers:
         - name: home-assistant
           image: ghcr.io/home-assistant/home-assistant:stable
