--- a/home_assistant/family_dashboard.yaml
+++ b/home_assistant/family_dashboard.yaml
@@ -6,20 +6,23 @@ kiosk_mode:
     hide_header: true
     hide_sidebar: true
     ignore_entity_settings: true
+
 views:
   - title: Home
     path: home
     type: custom:grid-layout
     layout:
       grid-template-columns: 75% 25%
-      grid-template-rows: auto
-      grid-gap: 3px
+      # Row 1: Header (Height adjusts to content), Row 2: Calendar (Fills rest)
+      grid-template-rows: min-content 1fr
+      grid-gap: 5px
       grid-template-areas: |
+        "header sidebar"
         "cal sidebar"
     cards:
-      - type: vertical-stack
-        view_layout:
-          grid-area: cal
+      # --- 1. HEADER AREA (Stack-in-Card with CSS Override) ---
+      - type: horizontal-stack
+        square: false
         cards:
           - type: markdown
             content: >
@@ -58,121 +61,165 @@ views:
                     color: #9CA3AF !important;
                     margin: 0 !important;
                   }
-          - type: custom:week-planner-card
-            calendars:
-              - entity: calendar.bo_cal
-                color: "#4285F4"
-                name: Dad
-              - entity: calendar.nata_cal
-                color: "#ae9cce"
-                name: Mom
-              - entity: calendar.family
-                color: "#f6bf26"
-                name: Family
-              - entity: calendar.holidays_in_united_states
-                color: "#7e59f8"
-                name: US Holidays
-              - entity: calendar.calendar.holidays_in_israel
-                color: "#c0fbcd"
-                name: Israel Holidays
-            days: 7
-            startingDayOffset: 0
-            hideWeekend: false
-            noCardBackground: false
-            compact: false
-            weather:
-              showCondition: true
-              showTemperature: true
-              showLowTemperature: true
-              useTwiceDaily: false
-              entity: weather.forecast_home
-            showLocation: false
-            hidePastEvents: false
-            hideDaysWithoutEvents: false
-            hideTodayWithoutEvents: false
-            combineSimilarEvents: true
-            showLegend: false
-            legendToggle: false
-            view_layout:
-              grid-area: cal
-            mode: week
-            timeFormat: h:mm a
-            border: false
-            texts:
-              monday: Mon
-              tuesday: Tue
-              wednesday: Wed
-              thursday: Thu
-              friday: Fri
-              saturday: Sat
-              sunday: Sun
-              yesterday: ""
-              today: ""
-              tomorrow: ""
-              fullDay: " "
+          - type: button
+            tap_action:
+              action: toggle
+            entity: input_boolean.calendar_view
+            icon: mdi:calendar-month
+            show_name: false
             card_mod:
               style: |
-                ha-card {
-                  --days-spacing: 5px !important;
-                  --events-margin-top: 3px;
-                  --event-padding: 3px;
-                  .event.past {
-                    opacity: .2;
-                    background-color: gray !important;
-                  }
-                  .time {
-                    color: #333333 !important;
-                    font-size: 0.8em !important;
-                  }
-                  .event {
-                    color: #333333 !important;
-                    padding: 1px 4px !important;       /* Minimal internal padding */
-                    margin-bottom: 3px !important;     /* Less space between events */
-                    line-height: 1.1 !important;
-                    line-height: 16px !important;
-                    background-color: var(--border-color) !important;
-                    border-radius: 10px !important;
-                    max-height: 80px !important;
-                    overflow: hidden !important;
-                    font-size: 1em !important;
-                  }
-                  .event .title {
-                    margin: 0 !important;
-                    padding: 0 !important;
-                  }
-                  .none {
-                    background-color: transparent !important;
-                  }
-                  .today .number {
-                    border-radius: 5px;
-                    background-color: orange !important;
-                    padding-left: 4px;
-                    padding-right: 4px;
-
-                  }
-                  .day .date .text {
-                    font-size: 1em !important;
-                    font-weight: bold !important;
-                  }
-                  .day .date .number {
-                    font-weight: bold !important;
-                    font-size: 3em !important;
-                  }
-                  .day {
-                    # --background-color: red;
-                    border: solid 1px #4a4a4a;
-                    padding: 0.2%;
-                    width: 13% !important;
-                  }
-                  .weather {
-                    position: relative !important;
-                    margin-top: 4px !important;
-                    font-size: 0.85em !important;
-                    font-weight: normal !important;
-                    display: flex !important;
-                    align-items: center !important;
-                  }
+                :host {
+                  flex: 0 0 60px !important;
+                  max-width: 60px !important;
                 }
+
+      # --- 2. CALENDAR AREA (Conditional Logic) ---
+      - type: vertical-stack
+        view_layout:
+          grid-area: cal
+        cards:
+          # VIEW A: WEEK PLANNER (OFF)
+          - type: conditional
+            conditions:
+              - entity: input_boolean.calendar_view
+                state: "off"
+            card:
+              type: custom:week-planner-card
+              calendars:
+                - entity: calendar.bo_cal
+                  color: "#4285F4"
+                  name: Dad
+                - entity: calendar.nata_cal
+                  color: "#ae9cce"
+                  name: Mom
+                - entity: calendar.family
+                  color: "#f6bf26"
+                  name: Family
+                - entity: calendar.holidays_in_united_states
+                  color: "#7e59f8"
+                  name: US Holidays
+                - entity: calendar.calendar.holidays_in_israel
+                  color: "#c0fbcd"
+                  name: Israel Holidays
+              days: 7
+              mode: week
+              timeFormat: h:mm a
+              border: false
+              texts:
+                fullDay: " "
+              weather:
+                showCondition: true
+                showTemperature: true
+                showLowTemperature: true
+                useTwiceDaily: false
+                entity: weather.forecast_home
+              card_mod:
+                style: |
+                  ha-card {
+                    height: 100% !important;
+                    --days-spacing: 5px !important;
+                    --events-margin-top: 5px !important;
+                    --event-padding: 3px;
+
+                    /* --- RESTORED WEATHER FIXES --- */
+                    /* 1. Force Header to Stack (Date Top, Weather Bottom) */
+                    .header {
+                      display: flex !important;
+                      flex-direction: column !important;
+                      align-items: flex-start !important;
+                      padding: 5px !important;
+                      margin-bottom: 5px !important;
+                    }
+
+                    /* 2. Fix Weather Positioning (Stop Floating) */
+                    .weather {
+                      position: relative !important;
+                      top: auto !important;
+                      right: auto !important;
+                      margin-top: 0px !important;
+                      font-size: 0.85em !important;
+                      color: #ccc !important;
+                      font-weight: normal !important;
+                      display: flex !important;
+                    }
+
+                    /* General Styles */
+                    .event.past { opacity: .2; background-color: gray !important; }
+                    .time { color: #333333 !important; font-size: 0.8em !important; }
+                    .event {
+                      color: #333333 !important;
+                      padding: 1px 4px !important;
+                      margin-bottom: 3px !important;
+                      line-height: 1.1 !important;
+                      background-color: var(--border-color) !important;
+                      border-radius: 10px !important;
+                      max-height: 80px !important;
+                      overflow: hidden !important;
+                      font-size: 1em !important;
+                    }
+                    .none { background-color: transparent !important; }
+                    .today .number {
+                       border-radius: 5px;
+                       background-color: orange !important;
+                       padding: 0 4px;
+                    }
+                    .day .date .number { font-size: 3em !important; font-weight: bold !important; }
+                    .day { border: solid 1px #4a4a4a; padding: 0.2%; width: 13% !important; }
+                  }
+
+          # VIEW B: MONTH CALENDAR (ON)
+          - type: conditional
+            conditions:
+              - entity: input_boolean.calendar_view
+                state: "on"
+            card:
+              type: custom:atomic-calendar-revive
+              name: "Month View"
+              enableModeChange: true
+              defaultMode: Calendar
+              maxDaysToShow: 30
+              firstDayOfWeek: 1
+              showDate: true
+              entities:
+                - entity: calendar.bo_cal
+                  name: Dad
+                  color: "#4285F4"
+                - entity: calendar.nata_cal
+                  name: Mom
+                  color: "#ae9cce"
+                - entity: calendar.family
+                  name: Family
+                  color: "#f6bf26"
+              card_mod:
+                style: |
+                  ha-card {
+                    height: 100% !important;
+                    background: none !important;
+                    border: none !important;
+                  }
+                  .cal-card { background: none !important; }
+                  .day-header { color: #ccc !important; }
+                  .day-number { color: white !important; }
+                  .currentDay { background-color: #f6bf26 !important; color: black !important; border-radius: 50%; }
+
+      # --- 3. RIGHT COLUMN: SIDEBAR ---
       - type: iframe
-        url: >-
-          https://app.todoist.com/app/today
+        url: https://app.todoist.com/app/today
+        view_layout:
+          grid-area: sidebar
+        card_mod:
+          style: |
+            ha-card {
+              height: 100% !important;
+              padding-bottom: 0 !important;
+            }
+            div#root { height: 100% !important; }
+            iframe {
+              height: 100% !important;
+              width: 100% !important;
+              position: absolute;
+              top: 0;
+              left: 0;
+              border: none !important;
+            }
