--- a/home_assistant/family_dashboard.yaml
+++ b/home_assistant/family_dashboard.yaml
@@ -12,13 +12,14 @@ views:
     type: custom:grid-layout
     layout:
       grid-template-columns: 3fr 1fr
-      grid-template-rows: min-content 1fr
+      grid-template-rows: min-content 1fr 160px
       grid-gap: 0
       margin: 0
       padding: 5px
       grid-template-areas: |
         "header sidebar"
         "cal sidebar"
+        "footer none"
     cards:
       - type: horizontal-stack
         square: false
@@ -200,6 +201,26 @@ views:
 
                   .currentDay { background-color: #f6bf26 !important; color:
                   black !important; border-radius: 50%; }
+      - type: custom:power-flow-card-plus
+        view_layout:
+          grid-area: none
+        entities:
+          solar:
+            entity: sensor.envoy_202403004899_current_power_production
+            display_zero_state: true
+          home:
+            entity: sensor.envoy_202403004899_current_power_consumption
+            color_icon: true
+          battery:
+            entity: sensor.total_battery_power
+            state_of_charge: sensor.encharge_492352002981_battery
+            color_circle: true
+          grid:
+            entity: sensor.grid_net_power
+            color_circle: true
+            display_zero_state: true
+        min_flow_rate: 0.9
+        max_flow_rate: 6
       - type: iframe
         url: https://app.todoist.com/app/today
         view_layout:
